--- a/Flexible_Plots.ipynb
+++ b/Flexible_Plots.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "# Importing libraries\n",
-    "%matplotlib inline\n",
+    "#%matplotlib inline\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
